IDEMPOTENCY _TTL
